--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,90 +1,91 @@
-#name: CI
-#
-#on:
-#  pull_request:
-#  push:
-#    branches: [ main ]
-#
-#jobs:
-#  scan_ruby:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Set up Ruby
-#        uses: ruby/setup-ruby@v1
-#        with:
-#          ruby-version: .ruby-version
-#          bundler-cache: true
-#
-#      - name: Scan for common Rails security vulnerabilities using static analysis
-#        run: bin/brakeman --no-pager
-#
-#  scan_js:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Set up Ruby
-#        uses: ruby/setup-ruby@v1
-#        with:
-#          ruby-version: .ruby-version
-#          bundler-cache: true
-#
-#      - name: Scan for security vulnerabilities in JavaScript dependencies
-#        run: bin/importmap audit
-#
-#  lint:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Set up Ruby
-#        uses: ruby/setup-ruby@v1
-#        with:
-#          ruby-version: .ruby-version
-#          bundler-cache: true
-#
-#      - name: Lint code for consistent style
-#        run: bin/rubocop -f github
-#
-#  test:
-#    runs-on: ubuntu-latest
-#
-#    # services:
-#    #  redis:
-#    #    image: redis
-#    #    ports:
-#    #      - 6379:6379
-#    #    options: --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
-#    steps:
-#      - name: Install packages
-#        run: sudo apt-get update && sudo apt-get install --no-install-recommends -y build-essential git libyaml-dev pkg-config google-chrome-stable
-#
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Set up Ruby
-#        uses: ruby/setup-ruby@v1
-#        with:
-#          ruby-version: .ruby-version
-#          bundler-cache: true
-#
-#      - name: Run tests
-#        env:
-#          RAILS_ENV: test
-#          # REDIS_URL: redis://localhost:6379/0
-#        run: bin/rails db:test:prepare test test:system
-#
-#      - name: Keep screenshots from failed system tests
-#        uses: actions/upload-artifact@v4
-#        if: failure()
-#        with:
-#          name: screenshots
-#          path: ${{ github.workspace }}/tmp/screenshots
-#          if-no-files-found: ignore
+name: CI
+
+on:
+  pull_request:
+  push:
+    branches: [ main ]
+
+jobs:
+  scan_ruby:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: .ruby-version
+          bundler-cache: true
+
+      - name: Scan for common Rails security vulnerabilities using static analysis
+        run: bin/brakeman --no-pager
+
+  scan_js:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: .ruby-version
+          bundler-cache: true
+
+      - name: Scan for security vulnerabilities in JavaScript dependencies
+        run: bin/importmap audit
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: .ruby-version
+          bundler-cache: true
+
+      - name: Lint code for consistent style
+        run: bin/rubocop -f github
+
+  rspec:
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:17.4-alpine
+        env:
+          POSTGRES_USER: local_user
+          POSTGRES_PASSWORD: local_password
+          POSTGRES_DB: local_db
+        ports:
+          - 5444:5432
+        options: >-
+          --health-cmd="pg_isready -U local_user -d postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+    env:
+      RAILS_ENV: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install PostgreSQL client headers
+        run: sudo apt-get update && sudo apt-get install -y libpq-dev
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: .ruby-version
+          bundler-cache: true
+
+      - name: Prepare database
+        run: bin/rails db:prepare
+
+      - name: Run RSpec
+        run: bundle exec rspec --format documentation
